--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
     "axios": "^1.13.2",
     "expo": "^54.0.28",
     "expo-status-bar": "~3.0.9",
