--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/ionicons": "^12.3.0",
     "axios": "^1.13.2",
-    "expo": "^54.0.28",
+    "expo": "~54.0.33",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
